--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta charset="utf-8">
 
   <title>hack settings</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <script src="script.js">></script>
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Roboto+Condensed' rel='stylesheet' type='text/css'>
 
 </head>
 
