--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="form-row form-last-row">
-                <button type="submit">fuck me up</button>
+                <button type="submit">Submit</button>
             </div>
 
         </form>
